@@ -1142,6 +1142,146 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testNotInExp1
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Expression
+name|exp
+init|=
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+literal|"abc"
+argument_list|,
+literal|"a"
+argument_list|,
+literal|"b"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|Expression
+operator|.
+name|NOT_IN
+argument_list|,
+name|exp
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testNotInExp2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|List
+argument_list|<
+name|Object
+argument_list|>
+name|v
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|v
+operator|.
+name|add
+argument_list|(
+literal|"a"
+argument_list|)
+expr_stmt|;
+name|v
+operator|.
+name|add
+argument_list|(
+literal|"b"
+argument_list|)
+expr_stmt|;
+name|Expression
+name|exp
+init|=
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+literal|"abc"
+argument_list|,
+name|v
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|Expression
+operator|.
+name|NOT_IN
+argument_list|,
+name|exp
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testNotInExp3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|List
+argument_list|<
+name|Object
+argument_list|>
+name|v
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|Expression
+name|exp
+init|=
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+literal|"abc"
+argument_list|,
+name|v
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|Expression
+operator|.
+name|TRUE
+argument_list|,
+name|exp
+operator|.
+name|getType
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testLikeExp
 parameter_list|()
 throws|throws
