@@ -33,6 +33,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -1102,6 +1112,46 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testInEmpty
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|dot
+argument_list|(
+name|Painting
+operator|.
+name|ESTIMATED_PRICE
+argument_list|)
+operator|.
+name|in
+argument_list|(
+name|Collections
+operator|.
+expr|<
+name|BigDecimal
+operator|>
+name|emptyList
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|compareSqlAndEval
+argument_list|(
+name|exp
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testNotIn
 parameter_list|()
 block|{
@@ -1157,6 +1207,46 @@ argument_list|(
 name|exp
 argument_list|,
 literal|3
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testNotInEmpty
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|dot
+argument_list|(
+name|Painting
+operator|.
+name|ESTIMATED_PRICE
+argument_list|)
+operator|.
+name|nin
+argument_list|(
+name|Collections
+operator|.
+expr|<
+name|BigDecimal
+operator|>
+name|emptyList
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|compareSqlAndEval
+argument_list|(
+name|exp
+argument_list|,
+literal|6
 argument_list|)
 expr_stmt|;
 block|}
